# langchain-kr-slim

./: .env-example  .gitignore  EXECUTION_REPORT.md  Makefile  PORTING_REPORT.md  README.md  pyproject.toml
00-Setting/: 01-setting.ipynb
01-Basic/: 02-OpenRouter-LLM.py  03-LCEL.py  04-LCEL-Advanced.py  05-Runnable.py
02-Prompt/: 01-PromptTemplate.py  02-FewShotTemplates.py  05-ChatPromptTemplate.py
03-OutputParser/: 01-PydanticOutputParser.py  02-CommaSeparatedListOutputParser.py  03-StructuredOutputParser.py  04-JsonOutputParser.py  05-PandasDataFrameOutputParser.py  06-DatetimeOutputParser.py  07-EnumOutputParser.py  08-OutputFixingParser.py
04-Model/: 01-Chat-Models.py  02-Cache.py  03-ModelSerialization.py  04-TokenUsage.py
05-Memory/: 01-ConversationBufferMemory.py  02-ConversationBufferWindowMemory.py  03-ConversationTokenBufferMemory.py  04-ConversationEntityMemory.py  05-ConversationKnowledgeGraph.py  06-ConversationSummary.py  07-VectorStoreRetrieverMemory.py  08-LCEL-add-memory.py  09-Memory-using-SQLite.py  10-Conversation-With-History.py  sqlite_history.db
06-DocumentLoader/: 00-Document-Loader.py  01-PDF-Loader.py  03-CSV-Loader.py  04-Excel-Loader.py  05-Word-Loader.py  06-PowerPoint-Loader.py  07-WebBase-Loader.py  08-TXT-Loader.py  09-JSON-Loader.py  10-Arxiv-Loader.py  11-Directory-Loader.py
07-TextSplitter/: 01-CharacterTextSplitter.py  02-RecursiveCharacterTextSplitter.py  03-TokenTextSplitter.py  04-SemanticChunker.py  05-CodeSplitter.py  06-MarkdownHeaderTextSplitter.py  07-HTMLHeaderTextSplitter.py  08-RecursiveJsonSplitter.py
08-Embeddings/: 01-OpenAIEmbeddings.py  02-CacheBackedEmbeddings.py  03-HuggingFaceEmbeddings.py
09-VectorStore/: 01-Chroma.py  02-FAISS.py
10-Retriever/: 01-VectorStoreRetriever.py  02-ContextualCompressionRetriever.py  03-EnsembleRetriever.py  04-LongContextReorder.py  05-ParentDocumentRetriever.py  06-MultiQueryRetriever.py  07-MultiVectorRetriever.py  08-SelfQueryRetriever.py  09-TimeWeightedVectorStoreRetriever.py  10-Kiwi-BM25Retriever.py  11-CC-EnsembleRetriever.py
11-Reranker/: 01-Cross-Encoder-Reranker.py  04-FlashRank-Reranker.py
12-RAG/: 02-RAG-Advanced.py  (+4 more)
(+65 files in other folders)
