[project]
name = "langchain-cookbook-ko"
version = "0.1.0"
description = "Korean beginner LangChain notebook exercises using OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0,<7.0.0",
    "jupyter>=1.1.0,<2.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-huggingface>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-text-splitters>=1.0.0,<2.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "ruff>=0.11.0,<1.0.0",
    "sentence-transformers>=5.1.0,<6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]
